sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_false_arrivalspeed/errors.duarouter
Error: Invalid arrivalSpeed definition for vehicle '1'
Quitting (on error).
